hphp/test/zend/bad/ext-spl/SplFileObject_fseek_error_001.php
<?php
$obj = New SplFileObject(__FILE__);
$obj->fseek(1,2,3);
$obj->fseek();
?>